Changes in the contact card

--- a/index.html
+++ b/index.html
@@ -308,8 +308,7 @@
          <div class="card text-center mb-4">
             <div class="card-body">
                 <h4 class="card-title text-uppercase">Website Design</h4>
-                <h5 class="card-subtitle text-muted">First, select the Template from here: <a href="https://themewagon.com/themes/?swoof=1&pa_price=free">Template List</a></h5> <br>
-                <h5 class="card-subtitle text-muted">Second, came back and submit the Link of your template, photos, texts even logos to here:</h5>
+                <p class="card-text">First, select the Template from here: <a class="fs-6 text-decoration-none" href="https://themewagon.com/themes/?swoof=1&pa_price=free">Templates</a> Second, came back and submit the Link of your template, photos, texts even logos here:</h5>
                 <p class="card-text"> 
                     <a href="mailto:ivanayaelcurra@iycsapphire.com.ar?Subject=Website%20Promo" target="_blank" rel="noopener noreferrer" aria-label="Contact me by Email">Email</a>
                 </p>
@@ -327,10 +326,12 @@
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-lg-4 text-lg-start">Copyright &copy; IYC Sapphire 2024</div>
+                
                 <div class="col-lg-4 my-3 my-lg-0">
                     <a class="btn btn-dark btn-social mx-2" href="https://www.instagram.com/iycsapphire" target="_blank" rel="noopener noreferrer" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
                     <a class="btn btn-dark btn-social mx-2" href="https://www.linkedin.com/in/ivanayael/" target="_blank" rel="noopener noreferrer" aria-label="LinkedIn"><i class="fab fa-linkedin-in"></i></a>
                 </div>
+                <div class="col-lg-4 text-lg-end">Designed and Develop by <a class="fs-6 text-decoration-none" href="http://www.ivanayaelcurra.com.ar">Ivana Yael Currá</a></div>
             </div>
         </div>
     </footer>
