--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
                         <div class="card-body">
                             <ul>
                                 <li>$1 Website Based on Free Template</li>
-                                <li>AI-Created Images Retouched</li>
-                                <li>AI-Created Text Retouched</li>
+                                <li>AI-Created Images</li>
+                                <li>AI-Created Text</li>
                             </ul>
                             <a href="#contact" class="btn btn-primary btn-xl text-uppercase">I want this</a>
                         </div>
@@ -80,8 +80,8 @@
                         <div class="card-body">
                             <ul>
                                 <li>Premium Template Based Website</li>
-                                <li>AI Created Images Retouched</li>
-                                <li>AI Created Texts Retouched</li>
+                                <li>AI Created Images</li>
+                                <li>AI Created Texts</li>
                                 <li>Business Consulting</li>
                             </ul>
                             <a href="#contact" class="btn btn-primary btn-xl text-uppercase">I want this</a>
@@ -98,8 +98,8 @@
                             <div class="card-body">
                                 <ul>
                                     <li>Premium Template Based Website</li>
-                                    <li>AI Created Images Retouched</li>
-                                    <li>AI Created Texts Retouched</li>
+                                    <li>AI Created Images</li>
+                                    <li>AI Created Texts</li>
                                     <li>Business Consulting</li>
                                     <li>Own Server Available Provided by DonWeb</li>
                                 </ul>
@@ -119,8 +119,8 @@
                         <div class="card-body">
                             <ul>
                                 <li>Premium Template-Based Website</li>
-                                <li>AI-Created Images Retouched</li>
-                                <li>AI-Supported Texts Retouched</li>
+                                <li>AI-Created Images</li>
+                                <li>AI-Supported Texts</li>
                                 <li>Business Consulting</li>
                                 <li>Own Server Available Provided by DonWeb</li>
                                 <li>Advertising Content: AI-Created Texts, Images, Sounds and Videos</li>
