--- a/index.html
+++ b/index.html
@@ -51,20 +51,20 @@
         <div class="container">
             <div class="text-center">
                 <h2 class="section-heading text-uppercase">Our Deals</h2>
-                <h3 class="section-subheading text-muted">Choose the plan for your</h3>
+                <h3 class="section-subheading text-muted">Choose the plan for your convenience</h3>
             </div>
             <div class="row text-center">
                 <!-- Paquete Rojo -->
                 <div class="col-md-6">
                     <div class="card">
                         <div class="card-header bg-danger text-white">
-                            Paquete Rojo: Starter Pack
+                            Basic
                         </div>
                         <div class="card-body">
                             <ul>
-                                <li>$1 Website Based on Free Template</li>
-                                <li>AI-Created Images</li>
-                                <li>AI-Created Text</li>
+                                <li>Website Based on Free Template <a class="fs-6 text-decoration-none" href="https://themewagon.com/themes/?swoof=1&pa_price=free">Here</a></li>
+                                <li>AI-Created Images with Edition</li>
+                                <li>AI-Supported Texts with Edition</li>
                             </ul>
                             <a href="#contact" class="btn btn-primary btn-xl text-uppercase">I want this</a>
                         </div>
@@ -75,14 +75,14 @@
                 <div class="col-md-6">
                     <div class="card">
                         <div class="card-header bg-light text-dark">
-                            Paquete Blanco: Make Better Business
+                            Business Improvement
                         </div>
                         <div class="card-body">
                             <ul>
-                                <li>Premium Template Based Website</li>
-                                <li>AI Created Images</li>
-                                <li>AI Created Texts</li>
-                                <li>Business Consulting</li>
+                                <li>Website Based on a Premium Template <a class="fs-6 text-decoration-none" href="https://themewagon.com/themes/?swoof=1&paged=1&pa_price=pro">Here</a></li>
+                                <li>AI-Created Images with Edition</li>
+                                <li>AI-Supported Texts with Edition</li>
+                                <li>Business Consulting with Re-engineer of Process</li>
                             </ul>
                             <a href="#contact" class="btn btn-primary btn-xl text-uppercase">I want this</a>
                         </div>
@@ -93,14 +93,14 @@
                     <div class="col-md-6">
                         <div class="card">
                             <div class="card-header bg-dark text-white">
-                                Paquete Negro: All in One
+                                Premium
                             </div>
                             <div class="card-body">
                                 <ul>
-                                    <li>Premium Template Based Website</li>
-                                    <li>AI Created Images</li>
-                                    <li>AI Created Texts</li>
-                                    <li>Business Consulting</li>
+                                    <li>Website Based on a Premium Template <a class="fs-6 text-decoration-none" href="https://themewagon.com/themes/?swoof=1&paged=1&pa_price=pro">Here</a></li>
+                                    <li>AI-Created Images with Edition</li>
+                                    <li>AI-Supported Texts with Edition</li>
+                                    <li>Business Consulting with Re-engineer of Process</li>
                                     <li>Own Server Available Provided by DonWeb</li>
                                 </ul>
                                 <a href="#contact" class="btn btn-primary btn-xl text-uppercase">I want this</a>
@@ -114,16 +114,16 @@
                 <div class="col-md-6">
                     <div class="card">
                         <div class="card-header bg-warning text-dark">
-                            Paquete Amarillo: Be on The Market
+                            Premium with Advertising
                         </div>
                         <div class="card-body">
                             <ul>
-                                <li>Premium Template-Based Website</li>
-                                <li>AI-Created Images</li>
-                                <li>AI-Supported Texts</li>
-                                <li>Business Consulting</li>
+                                <li>Website Based on a Premium Template <a class="fs-6 text-decoration-none" href="https://themewagon.com/themes/?swoof=1&paged=1&pa_price=pro">Here</a></li>
+                                <li>AI-Created Images with Edition</li>
+                                <li>AI-Supported Texts with Edition</li>
+                                <li>Business Consulting with Re-engineer of Process</li>
                                 <li>Own Server Available Provided by DonWeb</li>
-                                <li>Advertising Content: AI-Created Texts, Images, Sounds and Videos</li>
+                                <li>Advertising Content: AI-Created Texts, Images, Sounds and Videos with Edition</li>
                             </ul>
                             <a href="#contact" class="btn btn-primary btn-xl text-uppercase">I want this</a>
                         </div>
@@ -151,10 +151,6 @@
                 <h4 class="my-3">Change Management between Stratesys y AySA</h4>
                 <p class="text-muted">We implement an system digitalizing the process to all the aquifers works to AySA, improving operational efficiency and getting internal customer satisfaction by 80%</p>
             </div>
-            <div class="col-md-4">
-                <h4 class="my-3">Rooster Teeth</h4>
-                <p class="text-muted">We help to the rebrand process with new ideas and giving a training explainig the importance of the new style.</p>
-            </div>
         </div>
     </div>
 </section>
@@ -168,11 +164,11 @@
         <div class="card text-center mb-4">
             <div class="card-body">
                 <h4 class="card-title text-uppercase">Ivana Yael Curra</h4>
-                <h5 class="card-subtitle text-muted">Founder and Director</h5>
+                <h5 class="card-subtitle text-muted">Founder</h5>
                 <p class="card-text"> 
-                    <a href="https://wa.me/5491157014632" target="_blank" rel="noopener noreferrer" aria-label="Contact me by WhatsApp">WhatsApp</a>
-                    <a href="https://www.linkedin.com/in/ivanayael/" target="_blank" rel="noopener noreferrer" aria-label="Contact me by Linkedin" >Linkedin</a>
-                    <a href="mailto:ivanayaelcurra@iycsapphire.com.ar?Subject=Contact" target="_blank" rel="noopener noreferrer" aria-label="Contact me by Email">Email</a>
+                    <a href="https://wa.me/5491157014632" target="_blank" class="fs-6" rel="noopener noreferrer" aria-label="Contact me by WhatsApp">WhatsApp</a>
+                    <a href="https://www.linkedin.com/in/ivanayael/" target="_blank" rel="noopener noreferrer" class="fs-6" aria-label="Contact me by Linkedin" >Linkedin</a>
+                    <a href="mailto:ivanayaelcurra@gmail.com?Subject=Contact" target="_blank" rel="noopener noreferrer" class="fs-6" aria-label="Contact me by Email">Email</a>
                 </p>
                 
             </div>
@@ -185,7 +181,7 @@
                 <h4 class="card-title text-uppercase">Website Design</h4>
                 <p class="card-text">First, select the Template from here: <a class="fs-6 text-decoration-none" href="https://themewagon.com/themes/?swoof=1&pa_price=free">Templates</a> Second, came back and submit the Link of your template, photos, texts even logos here:</h5>
                 <p class="card-text"> 
-                    <a href="mailto:ivanayaelcurra@iycsapphire.com.ar?Subject=Website%20Promo" target="_blank" rel="noopener noreferrer" aria-label="Contact me by Email">Email</a>
+                    <a href="mailto:ivanayaelcurra@gmail.com?Subject=Website%20Promo" target="_blank" rel="noopener noreferrer" aria-label="Contact me by Email">Email</a>
                 </p>
             </div>
         </div>
