-Mejora de accesibilidad - Agregado de formulario para inscripcion

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <img src="assets/img/navbar-logo.svg" alt="IYC Sapphire Logo" />
             </a>
 
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
 
@@ -46,7 +46,7 @@
         <div class="container">
             <div class="masthead-heading text-end">Conéctate <br>tu Futuro con <br> IYC Sapphire</div>
             <div class="masthead-subheading text-end">Transforma y Capacita Tu Realidad</div>
-            <a class="btn btn-primary btn-xl" href="#services">Descubre Nuestros Servicios</a>
+            <a class="btn btn-primary btn-xl" href="#services" aria-label="Descubre Nuestros Servicios">Descubre Nuestros Servicios</a>
         </div>
     </header>
 
@@ -61,10 +61,11 @@
                         <div class="card-body">
                             <span class="fa-stack fa-2x">
                                 <i class="fas fa-circle fa-stack-2x text-sapphire"></i>
-                                <i class="fas fa-graduation-cap fa-stack-1x fa-inverse"></i>
+                                <i class="fas fa-graduation-cap fa-stack-1x fa-inverse" aria-hidden="true" ></i>
                             </span>
                             <h4 class="card-title">Capacitación Académica</h4>
                             <p>Apoyo en tesis, tesinas y especializaciones académicas.</p>
+                            <a href="#community" class="button">Inscribite</a>
                         </div>
                     </div>
                 </div>
@@ -73,10 +74,11 @@
                         <div class="card-body">
                             <span class="fa-stack fa-2x">
                                 <i class="fas fa-circle fa-stack-2x text-sapphire"></i>
-                                <i class="fas fa-laptop-code fa-stack-1x fa-inverse"></i>
+                                <i class="fas fa-laptop-code fa-stack-1x fa-inverse" aria-hidden="true"></i>
                             </span>
                             <h4 class="card-title">Diseño de Aplicaciones</h4>
                             <p>Diseño UX/UI con un enfoque moderno y práctico para aplicaciones.</p>
+                            <a href="#contact" class="button">Contactanos</a>
                         </div>
                     </div>
                 </div>
@@ -85,10 +87,11 @@
                         <div class="card-body">
                             <span class="fa-stack fa-2x">
                                 <i class="fas fa-circle fa-stack-2x text-sapphire"></i>
-                                <i class="fas fa-cogs fa-stack-1x fa-inverse"></i>
+                                <i class="fas fa-cogs fa-stack-1x fa-inverse" aria-hidden="true"></i>
                             </span>
                             <h4 class="card-title">Desarrollo de Aplicaciones a Medida</h4>
                             <p>Desarrollamos aplicaciones para su emprendimiento, pyme o gran empresa.</p>
+                            <a href="#contact" class="button">Contactanos</a>
                         </div>
                     </div>
                 </div>
@@ -97,10 +100,11 @@
                         <div class="card-body">
                             <span class="fa-stack fa-2x">
                                 <i class="fas fa-circle fa-stack-2x text-sapphire"></i>
-                                <i class="fas fa-tools fa-stack-1x fa-inverse"></i>
+                                <i class="fas fa-tools fa-stack-1x fa-inverse" aria-hidden="true"></i>
                             </span>
                             <h4 class="card-title">Soporte Técnico Especializado</h4>
                             <p>Solucionamos problemas de computadoras, servidores y redes de tu empresa.</p>
+                            <a href="#contact" class="button">Contactanos</a>
                         </div>
                     </div>
                 </div>
@@ -109,10 +113,11 @@
                         <div class="card-body">
                             <span class="fa-stack fa-2x">
                                 <i class="fas fa-circle fa-stack-2x text-sapphire"></i>
-                                <i class="fas fa-bullhorn fa-stack-1x fa-inverse"></i>
+                                <i class="fas fa-bullhorn fa-stack-1x fa-inverse" aria-hidden="true"></i>
                             </span>
                             <h4 class="card-title">Marketing Digital</h4>
                             <p>Potencia tu marca con estrategias digitales en redes sociales, SEO y SEM.</p>
+                            <a href="#contact" class="button">Contactanos</a>
                         </div>
                     </div>
                 </div>
@@ -121,10 +126,11 @@
                         <div class="card-body">
                             <span class="fa-stack fa-2x">
                                 <i class="fas fa-circle fa-stack-2x text-sapphire"></i>
-                                <i class="fas fa-calendar-alt fa-stack-1x fa-inverse"></i>
+                                <i class="fas fa-calendar-alt fa-stack-1x fa-inverse" aria-hidden="true"></i>
                             </span>
                             <h4 class="card-title">Diseño de Imagen para Eventos</h4>
                             <p>Creamos diseños para eventos empresariales y charlas de negocios.</p>
+                            <a href="#contact" class="button">Inscribite</a>
                         </div>
                     </div>
                 </div>
@@ -147,6 +153,7 @@
                             </span>
                             <h4 class="card-title">Diseño de Aplicaciones</h4>
                             <p>Aprende fundamentos de Diseño Gráfico, Manual de Marca, UX y UI.</p>
+                            <a href="https://forms.gle/51jDK915q2X8bcKN8" class="button" target="_blank">Inscribite</a>
                         </div>
                     </div>
                 </div>
@@ -159,6 +166,7 @@
                             </span>
                             <h4 class="card-title">Desarrollo de Sitios Web</h4>
                             <p>Utiliza templates, IA y ejercicios prácticos para aprender la lógica de la programación.</p>
+                            <a href="https://forms.gle/51jDK915q2X8bcKN8" class="button" target="_blank">Inscribite</a>
                         </div>
                     </div>
                 </div>
@@ -171,6 +179,7 @@
                             </span>
                             <h4 class="card-title">Desarrollo Web Avanzado</h4>
                             <p>Desarrolla proyectos completos desde el inicio hasta la implementación, integrando agilidad y escalabilidad.</p>
+                            <a href="https://forms.gle/51jDK915q2X8bcKN8" class="button" target="_blank">Inscribite</a>
                         </div>
                     </div>
                 </div>
@@ -183,6 +192,7 @@
                             </span>
                             <h4 class="card-title">Introducción al Marketing Digital</h4>
                             <p>Desarrolla tu propio plan de marketing digital y aprende a gestionar redes con soporte de IA.</p>
+                            <a href="https://forms.gle/51jDK915q2X8bcKN8" class="button" target="_blank">Inscribite</a>
                         </div>
                     </div>
                 </div>
@@ -195,6 +205,7 @@
                             </span>
                             <h4 class="card-title">Actuación</h4>
                             <p>Clases online personalizadas para explorar nuevas formas de expresión y resolver conflictos.</p>
+                            <a href="https://forms.gle/51jDK915q2X8bcKN8" class="button" target="_blank">Inscribite</a>
                         </div>
                     </div>
                 </div>
@@ -254,7 +265,7 @@
                     <p class="text-muted">Desarrollo de la aplicación personalizada para gestionar el sorteo al finalizar el evento.</p>
                 </div>
                 <div class="col-md-4">
-                    <h4 class="my-3">Meet and Net</h4>
+                    <h4 class="my-3">Sitio Web y Papelería de Meet and Net</h4>
                     <p class="text-muted">Desarrollo del sitio web para el evento y la papelería decorativa de la marca.</p>
                 </div>
                 <div class="col-md-4">
@@ -264,10 +275,6 @@
                 <div class="col-md-4">
                     <h4 class="my-3">Boychuk & Leonardi Firma de Abogados</h4>
                     <p class="text-muted">Desarrollo de sitio web y presencia online para un estudio legal, con seguridad y correo personalizado.</p>
-                </div>
-                <div class="col-md-4">
-                    <h4 class="my-3">Change Management Stratesys</h4>
-                    <p class="text-muted">Implementación de un sistema para digitalizar procesos, mejorando la eficiencia y satisfacción interna en un 80%.</p>
                 </div>
             </div>
         </div>
