Update Logo and Icons to webp

--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
         <div class="container">
             <a class="navbar-brand" href="#page-top">
-                <img src="assets/img/navbar-logo.svg" alt="IYC Sapphire Logo" />
+                <img src="assets/img/IconoLinkedinIYC.webp" alt="IYC Sapphire Icon" />
+                <img src="assets/img/navbar-logov3.webp" alt="IYC Sapphire Logo" />
             </a>
 
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
