--- a/index.html
+++ b/index.html
@@ -1,33 +1,36 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="es-ar">
 <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-    <meta name="description" content="Servicios profesionales de consultoría en gestión de procesos, normalización de datos y transformación digital." />
-    <meta name="author" content="IYC Sapphire" />
-    <meta name="keywords" content="consultoría, gestión de datos, transformación digital, optimización de procesos, ETL, entrada de datos, fusiones y adquisiciones" />
-    <title>IYC Sapphire</title>
-    <!-- Favicon-->
-    <link rel="icon" type="image/png" sizes="16x16" href="assets/web/icons8-diamond-color-16.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="assets/web/icons8-diamond-32.png">
-    <link rel="icon" type="image/png" sizes="96x96" href="assets/web/icons8-diamond-96.png">
-    <!-- Font Awesome icons (free version)-->
-    <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
-    <!-- Google fonts-->
-    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700|Roboto+Slab:400,100,300,700" rel="stylesheet" />
-    <!-- Core theme CSS (includes Bootstrap)-->
-    <link href="css/styles.css" rel="stylesheet" />
+        <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+        <meta name="description" content="Servicios profesionales de consultoría en gestión de procesos, normalización de datos y transformación digital." />
+        <meta name="author" content="IYC Sapphire" />
+        <meta name="keywords" content="consultoría, gestión de datos, transformación digital, optimización de procesos, ETL, entrada de datos, fusiones y adquisiciones" />
+        <title>IYC Sapphire</title>
+        <!-- Favicon-->
+        <link rel="icon" href="assets/web/icons8-diamond-color-16.png" sizes="16x16" />
+        <link rel="icon" href="assets/web/icons8-diamond-32.png" sizes="32x32" />
+        <link rel="icon" href="assets/web/icons8-diamond-96.png" sizes="96x96" />
+        <!-- Font Awesome icons (free version)-->
+        <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
+        <!-- Google fonts-->
+        <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700|Roboto+Slab:400,100,300,700" rel="stylesheet" />
+        <!-- Core theme CSS (includes Bootstrap)-->
+        <link href="css/styles.css" rel="stylesheet" />
+        <!-- Optimización de imágenes -->
+        <link rel="preload" href="assets/img/IconoLinkedinIYC.webp" as="image" type="image/webp" />
+        <link rel="preload" href="assets/img/navbar-logov3.webp" as="image" type="image/webp" />
 </head>
 <body id="page-top">
     <!-- Navigation-->
-    <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
+    <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav" aria-label="Navegación principal">
         <div class="container">
-            <a class="navbar-brand" href="#page-top">
+            <a class="navbar-brand" href="#page-top" aria-label="Ir a la página de inicio">
                 <img src="assets/img/IconoLinkedinIYC.webp" alt="IYC Sapphire Icon" />
                 <img src="assets/img/navbar-logov3.webp" alt="IYC Sapphire Logo" />
             </a>
 
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Alternar navegación">
                 <span class="navbar-toggler-icon"></span>
             </button>
 
@@ -45,24 +48,25 @@
     <!-- Main Section-->
     <header class="masthead">
         <div class="container">
-            <div class="masthead-heading text-end">Conéctate <br>tu Futuro con <br> IYC Sapphire</div>
+            <div class="masthead-heading text-end" aria-label="Título principal">Conéctate <br>tu Futuro con <br> IYC Sapphire</div>
             <div class="masthead-subheading text-end">Transforma y Capacita Tu Realidad</div>
             <a class="btn btn-primary btn-xl" href="#services" aria-label="Descubre Nuestros Servicios">Descubre Nuestros Servicios</a>
         </div>
     </header>
 
-    <!-- Servicios -->
+
     <section id="services" class="page-section">
         <div class="container text-center">
             <h2 class="section-heading">Nuestros Servicios</h2>
             <p class="section-subheading">Soluciones personalizadas para el éxito de tu empresa y tu carrera</p>
             <div class="row">
+                <!-- Card 1 -->
                 <div class="col-md-4">
                     <div class="card">
                         <div class="card-body">
                             <span class="fa-stack fa-2x">
                                 <i class="fas fa-circle fa-stack-2x text-sapphire"></i>
-                                <i class="fas fa-graduation-cap fa-stack-1x fa-inverse" aria-hidden="true" ></i>
+                                <i class="fas fa-graduation-cap fa-stack-1x fa-inverse" aria-hidden="true"></i>
                             </span>
                             <h4 class="card-title">Capacitación Académica</h4>
                             <p>Apoyo en tesis, tesinas y especializaciones académicas.</p>
@@ -141,71 +145,72 @@
 
     <!-- Capacítate -->
     <section id="community" class="page-section">
-        <div class="container text-center">
+                <div class="container text-center">
             <h2 class="section-heading">Capacítate</h2>
             <p class="section-subheading">Comienza tu camino hacia un futuro más brillante</p>
             <div class="row">
+                <!-- Card 1 -->
                 <div class="col-md-4">
                     <div class="card">
+                        <span class="fa-stack fa-4x card-img">
+                            <i class="fas fa-circle fa-stack-2x text-sapphire"></i>
+                            <i class="fas fa-pencil-alt fa-stack-1x fa-inverse"></i>
+                        </span>
                         <div class="card-body">
-                            <span class="fa-stack fa-2x">
-                                <i class="fas fa-circle fa-stack-2x text-sapphire"></i>
-                                <i class="fas fa-pencil-alt fa-stack-1x fa-inverse"></i>
-                            </span>
                             <h4 class="card-title">Diseño de Aplicaciones</h4>
-                            <p>Aprende fundamentos de Diseño Gráfico, Manual de Marca, UX y UI.</p>
+                            <p class="card-text text-sapphire">Aprende fundamentos de Diseño Gráfico, Manual de Marca, UX y UI.</p>
                             <a href="https://forms.gle/51jDK915q2X8bcKN8" class="button" target="_blank">Inscribite</a>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-4">
                     <div class="card">
+                        <span class="fa-stack fa-4x card-img">
+                            <i class="fas fa-circle fa-stack-2x text-sapphire"></i>
+                            <i class="fas fa-code fa-stack-1x fa-inverse"></i>
+                        </span>
                         <div class="card-body">
-                            <span class="fa-stack fa-2x">
-                                <i class="fas fa-circle fa-stack-2x text-sapphire"></i>
-                                <i class="fas fa-code fa-stack-1x fa-inverse"></i>
-                            </span>
                             <h4 class="card-title">Desarrollo de Sitios Web</h4>
-                            <p>Utiliza templates, IA y ejercicios prácticos para aprender la lógica de la programación.</p>
+                            <p class="card-text text-sapphire">Utiliza templates, IA y ejercicios prácticos para aprender la lógica de la programación.</p>
                             <a href="https://forms.gle/51jDK915q2X8bcKN8" class="button" target="_blank">Inscribite</a>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-4">
                     <div class="card">
+                        <span class="fa-stack fa-4x card-img">
+                            <i class="fas fa-circle fa-stack-2x text-sapphire"></i>
+                            <i class="fas fa-cogs fa-stack-1x fa-inverse"></i>
+                        </span>
                         <div class="card-body">
-                            <span class="fa-stack fa-2x">
-                                <i class="fas fa-circle fa-stack-2x text-sapphire"></i>
-                                <i class="fas fa-cogs fa-stack-1x fa-inverse"></i>
-                            </span>
                             <h4 class="card-title">Desarrollo Web Avanzado</h4>
-                            <p>Desarrolla proyectos completos desde el inicio hasta la implementación, integrando agilidad y escalabilidad.</p>
+                            <p class="card-text text-sapphire">Desarrolla proyectos completos desde el inicio hasta la implementación, integrando agilidad y escalabilidad.</p>
                             <a href="https://forms.gle/51jDK915q2X8bcKN8" class="button" target="_blank">Inscribite</a>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-4">
                     <div class="card">
+                        <span class="fa-stack fa-4x card-img">
+                            <i class="fas fa-circle fa-stack-2x text-sapphire"></i>
+                            <i class="fas fa-chart-line fa-stack-1x fa-inverse"></i>
+                        </span>
                         <div class="card-body">
-                            <span class="fa-stack fa-2x">
-                                <i class="fas fa-circle fa-stack-2x text-sapphire"></i>
-                                <i class="fas fa-chart-line fa-stack-1x fa-inverse"></i>
-                            </span>
                             <h4 class="card-title">Introducción al Marketing Digital</h4>
-                            <p>Desarrolla tu propio plan de marketing digital y aprende a gestionar redes con soporte de IA.</p>
+                            <p class="card-text text-sapphire">Desarrolla tu propio plan de marketing digital y aprende a gestionar redes con soporte de IA.</p>
                             <a href="https://forms.gle/51jDK915q2X8bcKN8" class="button" target="_blank">Inscribite</a>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-4">
                     <div class="card">
+                        <span class="fa-stack fa-4x card-img">
+                            <i class="fas fa-circle fa-stack-2x text-sapphire"></i>
+                            <i class="fas fa-theater-masks fa-stack-1x fa-inverse"></i>
+                        </span>
                         <div class="card-body">
-                            <span class="fa-stack fa-2x">
-                                <i class="fas fa-circle fa-stack-2x text-sapphire"></i>
-                                <i class="fas fa-theater-masks fa-stack-1x fa-inverse"></i>
-                            </span>
                             <h4 class="card-title">Actuación</h4>
-                            <p>Clases online personalizadas para explorar nuevas formas de expresión y resolver conflictos.</p>
+                            <p class="card-text text-sapphire">Clases online personalizadas para explorar nuevas formas de expresión y resolver conflictos.</p>
                             <a href="https://forms.gle/51jDK915q2X8bcKN8" class="button" target="_blank">Inscribite</a>
                         </div>
                     </div>
@@ -213,6 +218,7 @@
             </div>
         </div>
     </section>
+    
 
     <!-- Acerca de Nosotros -->
     <section id="about" class="section-about">
